--- a/Psythyst.CodeGenerator/Psythyst.Plugin.CodeGenerator.Entitas/Psythyst.Plugin.CodeGenerator.Entitas/Psythyst.Plugin.CodeGenerator.Entitas/Psythyst.Plugin.CodeGenerator.Entitas.csproj
+++ b/Psythyst.CodeGenerator/Psythyst.Plugin.CodeGenerator.Entitas/Psythyst.Plugin.CodeGenerator.Entitas/Psythyst.Plugin.CodeGenerator.Entitas/Psythyst.Plugin.CodeGenerator.Entitas.csproj
@@ -7,20 +7,20 @@
     <PackageReference Include="Psythyst.Data.Entitas" Version="1.4.0" />
   </ItemGroup>
 <PropertyGroup>
-  <VersionPrefix>1.4.0</VersionPrefix>
+  <VersionPrefix>0.5.0</VersionPrefix>
   <!--<VersionSuffix>stable</VersionSuffix>-->
 </PropertyGroup>
 <PropertyGroup>
-    <Title>Psythyst.Plugin.CodeGenerator.Default</Title>
-    <PackageId>Psythyst.Plugin.CodeGenerator.Default</PackageId>
-    <PackageVersion>1.4.0</PackageVersion>
+    <Title>Psythyst.Plugin.CodeGenerator.Entitas</Title>
+    <PackageId>Psythyst.Plugin.CodeGenerator.Entitas</PackageId>
+    <PackageVersion>0.5.0</PackageVersion>
     <PackageProjectUrl>https://github.com/Psythyst/Psythyst.CodeGenerator/</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/Psythyst/Psythyst.CodeGenerator/blob/develop/LICENCE.txt</PackageLicenseUrl>
     <RepositoryUrl>https://github.com/Psythyst/Psythyst.CodeGenerator</RepositoryUrl>
     <Authors>SirMetathyst</Authors>
-    <Description>Psythyst Default CodeGenerator(s)</Description>
+    <Description>Psythyst Entitas CodeGenerator(s)</Description>
     <PackageReleaseNotes></PackageReleaseNotes>
     <Copyright>Copyright 2017 (c) Alexander Hunt.</Copyright>
-    <PackageTags>CodeGenerator,Psythyst</PackageTags>
+    <PackageTags>CodeGenerator,Psythyst,Entitas</PackageTags>
 </PropertyGroup>
 </Project>
